Fixed z-index on selted view

--- a/src/components/BottomNavSelection/BottomNavSelection.css
+++ b/src/components/BottomNavSelection/BottomNavSelection.css
@@ -5,4 +5,5 @@
   height: 72px;
   position: fixed;
   width: 100%;
+  bottom: 0;
 }
