--- a/src/components/IndexSelection/IndexSelection.css
+++ b/src/components/IndexSelection/IndexSelection.css
@@ -11,8 +11,8 @@ section {
 }
 
 footer img {
-  width: 103%;
-  height: 100%;
+  width: 101%;
+  height: 103%;
   position: relative;
 }
 
@@ -22,6 +22,7 @@ footer img {
   justify-content: center;
   align-items: center;
   height: 86vh;
+  padding: 1.5em 0 1.24em 0;
 }
 
 .permanent {
