--- a/src/components/SelectionView/SelectionView.css
+++ b/src/components/SelectionView/SelectionView.css
@@ -9,12 +9,12 @@ p {
   justify-content: space-around;
   padding: 0.4em 1em;
   background-color: #eeeeef;
+  padding-bottom: 72px;
 }
 
 .SelectionView > img {
   width: 100%;
-  z-index: 1;
-  /*position: absolute;*/
+  z-index: -1;
 }
 
 .paintingSelection {
